fix(final):fix horizontal scroll with overflowxhidden in html and body tag -final

--- a/src/scss/3-basics/_base.scss
+++ b/src/scss/3-basics/_base.scss
@@ -27,10 +27,10 @@
   user-select: none;
 }
 html {
-  overflow: hidden;
+  overflow-x: hidden;
 }
 body {
-  overflow: hidden;
+  overflow-x: hidden;
   background-color: white;
 }
 
