--- a/src/scss/main.css
+++ b/src/scss/main.css
@@ -380,11 +380,11 @@ template {
 }
 
 html {
-  overflow: hidden;
+  overflow-x: hidden;
 }
 
 body {
-  overflow: hidden;
+  overflow-x: hidden;
   background-color: white;
 }
 
